# cgp-examples

./: Cargo.toml
builder/: Cargo.toml
builder/src/: lib.rs
builder/src/contexts/: anthropic.rs  anthropic_and_chatgpt.rs  app.rs  builder.rs  default_builder.rs  full_builder.rs  min_builder.rs  mod.rs  postgres.rs
builder/src/providers/: anthropic.rs  chatgpt.rs  http_client.rs  mod.rs  postgres.rs  sqlite.rs  sqlite_and_http.rs
expression/: Cargo.toml
expression/src/: dsl.rs  lib.rs
expression/src/classic/: add_mult.rs
expression/src/components/: expression.rs
expression/src/contexts/: add_mult.rs  add_mult_binary_op.rs  add_mult_code.rs  add_mult_neg.rs  mod.rs
expression/src/providers/: add.rs  mod.rs
expression/src/providers/eval/: add.rs  literal.rs  mod.rs  multiply.rs  negate.rs  subtract.rs
expression/src/providers/to_lisp/: add.rs  binary.rs  literal.rs  mod.rs  multiply.rs
expression/src/types/: add.rs  ident.rs  list.rs  literal.rs  minus.rs  mod.rs  multiply.rs  negate.rs
greet/: Cargo.toml
greet/src/: greet_expanded.rs  lib.rs
transfer/: Cargo.toml  example.sh
transfer/src/: lib.rs  traits.rs  types.rs
transfer/src/contexts/: app.rs
transfer/src/impls/: auth.rs  basic_auth.rs  handlers.rs  mocked.rs  mod.rs
transfer/src/interfaces/: api.rs  auth.rs  error.rs  finance.rs  mod.rs  types.rs
transfer/src/providers/: axum.rs  basic_auth.rs  error.rs  finance.rs  handlers.rs  mocked.rs  mod.rs
transfer/src/providers/api_handlers/: basic_auth.rs  from_request.rs  mod.rs  query_balance.rs  transfer.rs
transfer/src/providers/axum/: basic_auth.rs  json.rs  mod.rs  routes.rs
transfer/src/types/: currency.rs  error.rs  mod.rs
transfer/src/types/requests/: mod.rs  query_balance.rs  transfer.rs
