[workspace]

resolver = "3"

members = [ "expression", "greet", "transfer", "builder" ]

[patch.crates-io]
cgp             = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-core        = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-extra       = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-async       = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-async-macro = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-component   = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-macro       = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-macro-lib   = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-type        = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-field       = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-error       = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-error-extra = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-run         = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-runtime     = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-sync        = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-inner       = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-handler     = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
cgp-dispatch    = { git = "https://github.com/contextgeneric/cgp.git", rev = "f1bcbc80" }
