[workspace]

resolver = "3"

members = [
    "expression",
    "greet",
    "transfer",
    "builder",
]

[workspace.package]
rust-version    = "1.90"
edition         = "2024"
license         = "MIT"
repository      = "https://github.com/contextgeneric/cgp-examples"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[workspace.dependencies]
cgp                 = { version = "0.5.0-alpha" }
cgp-error-anyhow    = { version = "0.5.0-alpha" }

[patch.crates-io]
cgp                 = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-core            = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra           = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async-macro     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-macro           = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-macro-lib       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-type            = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field           = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error           = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-extra     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-run             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-runtime         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-inner           = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-handler         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-dispatch        = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-anyhow    = { git = "https://github.com/contextgeneric/cgp.git" }
