[workspace]

resolver = "3"

members = [
    "expression",
    "greet",
    "transfer",
    "builder",
]

[workspace.package]
rust-version    = "1.90"
edition         = "2024"
license         = "MIT"
repository      = "https://github.com/contextgeneric/cgp-examples"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[workspace.dependencies]
cgp                 = { version = "0.6.1" }
cgp-error-anyhow    = { version = "0.6.1" }

[patch.crates-io]
cgp                 = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-anyhow    = { git = "https://github.com/contextgeneric/cgp.git" }
