[package]
name = "cgp-example-expression"
version = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
cgp = { workspace = true }
