[package]
name = "cgp-example-greet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "greet"
path = "bin/greet.rs"

[dependencies]
cgp                 = { version = "0.3.0", features = ["provider-supertrait"] }

[patch.crates-io]
cgp                         = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-core                    = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-extra                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-async                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-async-macro             = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-component               = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-component-macro         = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-component-macro-lib     = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-type                    = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-field                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-field-macro             = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-field-macro-lib         = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-error                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-error-extra             = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-error-anyhow            = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-run                     = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-runtime                 = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-sync                    = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }
cgp-inner                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "cgp-type-redesign" }