[package]
name = "cgp-example-greet"
version = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[[bin]]
name = "greet"
path = "bin/greet_name.rs"

[dependencies]
cgp = { workspace = true }
