[package]
name = "cgp-example-greet"
version = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[[bin]]
name = "greet-simple"
path = "bin/greet_simple.rs"

[[bin]]
name = "greet-component"
path = "bin/greet_component.rs"

[[bin]]
name = "greet-abstract-type"
path = "bin/greet_abstract_type.rs"

[dependencies]
cgp = { workspace = true }
