[package]
name = "cgp-example-transfer"
version = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[[bin]]
name = "server"
path = "bin/server.rs"

[dependencies]
cgp         = { workspace = true }

anyhow      = { version = "1.0.95" }
futures     = { version = "0.3.31" }
num-traits  = { version = "0.2.19" }
serde       = { version = "1.0.217", features = ["derive"] }
axum        = { version = "0.8.1" }
axum-extra  = { version = "0.10.0", features = ["typed-header"] }
headers     = { version = "0.4.0" }
tokio       = { version = "1.43.0", features = ["full"] }
